--- a/9_regressions.Rmd
+++ b/9_regressions.Rmd
@@ -9,10 +9,14 @@ library(estimatr)
 library(lmtest)
 library(sandwich)
 library(broom)
+
+# This is where I run all my regressions. Most of this again isn't super
+# necessary for gov 50. 
 ```
 
 ```{r}
 # most recent data
+
 most_recent <- readRDS('ppp_allvars_1028.rds') %>%
   mutate(median_family_income = median_family_income / 1000,
          bank_ppp_issued = bank_ppp_issued / 1000,
@@ -25,7 +29,11 @@ most_recent <- readRDS('ppp_allvars_1028.rds') %>%
 ```{r}
 #residuals <-summary(all_linear_reg)$df.residual
 
-ggplot(data = most_recent, mapping = aes(x = days_to_approval, y = (days_to_approval - all_linear_reg$fitted.values))) +
+# This is just a residual plot for my own use to look at heteroskedasticity --
+# I also used the Breusch-Pagan test (bptest in R) to look at this.
+
+ggplot(data = most_recent, mapping = aes(x = days_to_approval, 
+                                         y = (days_to_approval - all_linear_reg$fitted.values))) +
   geom_jitter(alpha = 0.3, color = "dodgerblue") +
   ylim(-250, 500) +
   labs(x = "Days to Approval", y = "Residuals", title = "Waiting Time vs. Residuals")
@@ -35,11 +43,29 @@ ggplot(data = most_recent, mapping = aes(x = days_to_approval, y = (days_to_appr
 ```{r}
 # most recent county
 
-most_recent_county <- readRDS('counties_all_1028.rds')
+most_recent_county <- readRDS('counties_all_1028.rds') %>%
+   mutate(median_income = median_income / 1000,
+         bank_ppp_issued = bank_ppp_issued / 1000,
+         
+         # This is b/c we didn't do per 10,000 people before, but we want 
+         # hundreds of businesses 
+         # per 10,000 people, or 100
+         
+         businesses_per_pop = businesses_per_pop * 100,
+         violent_crime_rate = violent_crime_rate / 10,
+         pop_den = pop_den / 100,
+         black_percent = black_percent * 100,
+         white_percent = white_percent * 100) %>%
+  
+  # We make this a factor to let lm_robust work faster when it calculates
+  # clustered SEs
+  
+  mutate(fips = as.factor(fips))
 ```
 
 ```{r}
-# Straight regression -- all variables, no interactions
+# Straight regression -- all variables, no interactions. You can just see
+# similar regressions all the way down -- most of this is self-explanatory.
 
 all_linear_reg <- lm_robust(days_to_approval ~ 1 + median_family_income +
        black_percent +
@@ -72,6 +98,7 @@ summary(all_linear_reg)
 tibble_all_linear <- tidy(all_linear_reg)
 
 ```
+
 ```{r}
 all_linear_reg_b <- lm_robust(days_to_approval ~ 1 + median_family_income +
        black_percent +
@@ -134,16 +161,6 @@ tibble_all_linear_c <- tidy(all_linear_reg_c)
 
 
 ```{r}
-most_recent_county <- counties_all_1028 %>%
-   mutate(median_income = median_income / 1000,
-         bank_ppp_issued = bank_ppp_issued / 1000,
-         # This is b/c we didn't do per 10,000 people before, but we want hundreds of businesses per 10,000 people, or 100
-         businesses_per_pop = businesses_per_pop * 100,
-         violent_crime_rate = violent_crime_rate / 10,
-         pop_den = pop_den / 100,
-         black_percent = black_percent * 100,
-         white_percent = white_percent * 100) %>%
-  mutate(fips = as.factor(fips))
   
 county_reg_a <- lm_robust(days_to_approval ~ 1 + median_income +
        black_percent +
